<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="350dp"
    android:layout_height="100dp">
    <TextView
        android:id="@+id/drop_down_headphone_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/select_headphone_state"
        android:textStyle="bold"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/drop_down_headphone_tv_option1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textSize="15dp"
        android:text="@string/plugged_in" />
    <TextView
        android:id="@+id/drop_down_headphone_tv_option2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/plugged_out" />

</LinearLayout>