<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:id="@+id/linearLayout1"

        android:orientation="horizontal">

        <EditText
            android:id="@+id/maps_activity_edt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:hint="@string/search_location_here" />


        <Button
            android:id="@+id/maps_activity_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:onClick="onMapSearch"
            android:text="@string/search" />

    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"

        android:layout_below="@+id/linearLayout1"
        android:layout_height="match_parent">


        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:context="com.example.usman.newawareness.Activities.Activity_Maps" />

        <ImageButton
            android:layout_width="20dp"
            android:layout_height="30dp"
            app:layout_constraintLeft_toRightOf="@id/map"
            android:layout_marginEnd="60dp"
            android:background="@drawable/zoom_in"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            android:id="@+id/btn_zoomin"/>

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline"
            app:layout_constraintGuide_percent="0.2"
            android:orientation="horizontal" />
    <ImageButton
        android:layout_width="20dp"
        android:layout_height="30dp"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/zoom_out"
        android:id="@+id/maps_activity_btn_zoomout"
        app:layout_constraintLeft_toRightOf="@id/map"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_zoomin"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/maps_btn_current_location"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/use_current_location"/>


    </android.support.constraint.ConstraintLayout>



</RelativeLayout>
